# QoL-airflow

./: .gitignore  README.md  airflow.cfg  airflow.db  pyproject.toml
assets/: exportJSON_TAZ_UTM47N.json
dags/: generate_qol.py
dags/utils/: map.py
